# GenerateDidWeb

./: .gitignore  LICENSE  README.md  generate.py  host_veramo_did_web_github.sh  pyproject.toml  sample.env
BINANCE_BTCUSDC/: did.json
BINANCE_BTCUSDT/: did.json
BINANCE_ETHUSDC/: did.json
BINANCE_ETHUSDP/: did.json
BINANCE_ETHUSDT/: did.json
device-1/: did.json
device-2/: did.json
device-3/: did.json
device-4/: did.json
device-5/: did.json
device-6/: did.json
