[project]
name = "generatedidweb"
version = "0.1.0"
description = "simplified process for creating your own decentralized identifier (or DID), using the did:web method"
authors = [
    {name = "Male Michael",email = "malmike21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography (>=45.0.5,<46.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
